# mask2graph

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  api.py  mass_roads_graph_overlay.ipynb  networkx_utils.py  pyproject.toml  serialize.py  skeleton.py
.github/workflows/: ci.yml
benchmarks/: benchmark_extract.py
examples/: example_2d_line_network.py  example_2d_loop.py  example_3d_branch.py
mask2graph/: __init__.py  api.py  cli.py  config.py  debug.py  networkx_utils.py  nodes.py  normalize.py  preprocess.py  radius.py  serialize.py  types.py
mask2graph/utils/: connectivity.py  coords.py
maskgraph/: __init__.py  api.py  cli.py  config.py  debug.py  degree.py  networkx_utils.py  nodes.py  normalize.py  preprocess.py  serialize.py  trace.py  types.py
maskgraph/utils/: __init__.py  rdp.py
tests/: test_extract_graph.py  test_networkx_utils.py  test_normalize_graph.py
utils/: __init__.py  hash.py
