[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "maskgraph"
version = "0.1.0a0"
description = "Alpha: deterministic binary mask to graph extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.2.3",
  "scipy==1.15.2",
  "scikit-image==0.25.2",
]
keywords = [
  "image-processing",
  "skeletonization",
  "graph-extraction",
  "computer-vision",
  "3d-imaging",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://github.com/farzadhallaji/mask2graph"
Repository = "https://github.com/farzadhallaji/mask2graph"
Issues = "https://github.com/farzadhallaji/mask2graph/issues"

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
]

[project.scripts]
maskgraph = "maskgraph.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
